--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -13,6 +13,7 @@
         <span class="brand">
           List Market
         </span>
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></a>
         <div class="nav-collapse">
           <ul class="nav">
             <li> <%= link_to "Messages", messages_path %> </li>
@@ -25,24 +26,8 @@
   <div class="pseudo-topbar">
   </div>
   <div class="container-fluid">
-    <div class="span4 navbar-fixed-left">
-      <ul class="nav nav-pills nav-stacked well highlight_test">
-        <% @messages.each do |message| %>
-          <li id=<%= message.id %>>
-            <a data-remote=true href=<%= message_path(message)%>>  <%= message.title %>  <span class="label label-<%= message.tags.first.id == 1 ? 'info' : 'success' %>" > <%= message.tags.first.name %> </span></a>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-    
-    <a class="scrollUpBtn" href="#"></a> <a class="scrollDownBtn" href="#"></a>
-    </div></div>
-    <div class="span4 pseudo-navbar">
-    </div>
     <div class="row-fluid">
-      <div class="span8">
         <%= yield %>
-      </div>
     </div>
   </div>
 </body>
