--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,19 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-<p class="title">
-  <%= @message.title %>
-</p>
-
-<p class="body">
-  <%= simple_format @message.body %>
-</p>
-
-<p class="source">
-  <%= simple_format @message.source %>
-</p>
-
-
-<div class="btn-group">
-  <%= link_to 'Edit', edit_message_path(@message), :class => "btn" %> 
-  <%= link_to 'Back', messages_path, :class => "btn" %>
+<div id="show_message">
+  <%= render 'message' %>
 </div>
