--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="content">
+  <ul id="list">
+    <% @messages.each do |message| %>
+      <li id=<%= message.id %> class="well">
+        <a href=<%= message_path(message)%>>  <%= message.title %>  <span class="label label-<%= message.tags.first.id == 1 ? 'info' : 'success' %>" > <%= message.tags.first.name %> </span></a>
+      </li>
+    <% end %>
+  </ul>
+</div>
